# openapi.yaml
@@ -320,94 +320,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.realworld.v1.ListTagReply'
-    /api/user:
-        get:
-            tags:
-                - User
-            description: 获取用户
-            operationId: User_GetUser
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.realworld.v1.GetUserReply'
-        put:
-            tags:
-                - User
-            description: 更新用户
-            operationId: User_UpdateUser
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.realworld.v1.UpdateUserRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.realworld.v1.UpdateUserReply'
-    /api/users:
-        post:
-            tags:
-                - User
-            description: 注册
-            operationId: User_CreateUser
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.realworld.v1.CreateUserRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.realworld.v1.CreateUserReply'
-    /api/users/login:
-        post:
-            tags:
-                - User
-            description: 登录
-            operationId: User_Login
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.realworld.v1.LoginRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.realworld.v1.LoginResponse'
-    /api/users/login/123:
-        post:
-            tags:
-                - RealWorld
-            description: 登录
-            operationId: RealWorld_Login
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/realworld.v1.LoginRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/realworld.v1.LoginResponse'
 components:
     schemas:
         api.realworld.v1.CreateArticleRequest:
@@ -468,25 +380,6 @@ components:
             type: object
             properties:
                 body:
-                    type: string
-        api.realworld.v1.CreateUserReply:
-            type: object
-            properties:
-                name:
-                    type: string
-        api.realworld.v1.CreateUserRequest:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/api.realworld.v1.CreateUserRequest_User'
-        api.realworld.v1.CreateUserRequest_User:
-            type: object
-            properties:
-                username:
-                    type: string
-                email:
-                    type: string
-                password:
                     type: string
         api.realworld.v1.DeleteCommentReply:
             type: object
@@ -566,24 +459,6 @@ components:
         api.realworld.v1.GetProfileReply:
             type: object
             properties: {}
-        api.realworld.v1.GetUserReply:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/api.realworld.v1.GetUserReply_User'
-        api.realworld.v1.GetUserReply_User:
-            type: object
-            properties:
-                email:
-                    type: string
-                token:
-                    type: string
-                username:
-                    type: string
-                bio:
-                    type: string
-                image:
-                    type: string
         api.realworld.v1.ListTagReply:
             type: object
             properties:
@@ -591,36 +466,6 @@ components:
                     type: array
                     items:
                         type: string
-        api.realworld.v1.LoginRequest:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/api.realworld.v1.LoginRequest_User'
-        api.realworld.v1.LoginRequest_User:
-            type: object
-            properties:
-                email:
-                    type: string
-                password:
-                    type: string
-        api.realworld.v1.LoginResponse:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/api.realworld.v1.LoginResponse_User'
-        api.realworld.v1.LoginResponse_User:
-            type: object
-            properties:
-                username:
-                    type: string
-                email:
-                    type: string
-                password:
-                    type: string
-                bio:
-                    type: string
-                image:
-                    type: string
         api.realworld.v1.MultipleArticlesReply:
             type: object
             properties:
@@ -720,59 +565,8 @@ components:
                     type: array
                     items:
                         type: string
-        api.realworld.v1.UpdateUserReply:
-            type: object
-            properties: {}
-        api.realworld.v1.UpdateUserRequest:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/api.realworld.v1.UpdateUserRequest_User'
-        api.realworld.v1.UpdateUserRequest_User:
-            type: object
-            properties:
-                username:
-                    type: string
-                bio:
-                    type: string
-                image:
-                    type: string
-        realworld.v1.LoginRequest:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/realworld.v1.LoginRequest_User'
-        realworld.v1.LoginRequest_User:
-            type: object
-            properties:
-                email:
-                    type: string
-                password:
-                    type: string
-        realworld.v1.LoginResponse:
-            type: object
-            properties:
-                user:
-                    $ref: '#/components/schemas/realworld.v1.LoginResponse_User'
-        realworld.v1.LoginResponse_User:
-            type: object
-            properties:
-                username:
-                    type: string
-                email:
-                    type: string
-                password:
-                    type: string
-                bio:
-                    type: string
-                image:
-                    type: string
 tags:
     - name: Article
     - name: Comment
     - name: Profile
-    - name: RealWorld
-      description: RealWorld
     - name: Tag
-    - name: User
-      description: user
